--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogboundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogboundary.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="480.0" prefWidth="340.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogBoundary">
+<AnchorPane prefHeight="480.0" prefWidth="340.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogBoundary">
     <children>
-        <ListView fx:id="myListView" layoutX="6.0" layoutY="77.0" prefHeight="398.0" prefWidth="327.0" />
-        <Text layoutX="129.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: black;" text="Catalgue" textAlignment="CENTER">
+        <ListView fx:id="myListView" layoutX="6.0" layoutY="77.0" prefHeight="398.0" prefWidth="327.0" style="-fx-background-radius: 20; -fx-border-radius: 30; -fx-background-color: transparent;" />
+        <Text layoutX="96.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Catalog" textAlignment="CENTER">
             <font>
                 <Font name="Arial Bold" size="24.0" />
             </font>
