--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/loginBoundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/loginBoundary.fxml
@@ -7,13 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.LoginController">
    <children>
       <Text fill="#d91616" layoutX="216.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Sign in" />
       <Label layoutX="140.0" layoutY="172.0" text="Email" />
       <Label layoutX="140.0" layoutY="211.0" text="Password:" />
       <TextField fx:id="email" layoutX="289.0" layoutY="168.0" onKeyReleased="#keyReleasedPropert" />
       <PasswordField fx:id="password" layoutX="289.0" layoutY="207.0" onKeyReleased="#keyReleasedPropert" />
-      <Button fx:id="loginBtn" layoutX="263.0" layoutY="291.0" mnemonicParsing="false" onAction="#onClick" text="login" />
+      <Button fx:id="loginBtn" layoutX="392.0" layoutY="291.0" mnemonicParsing="false" onAction="#onClick" text="Login" />
+      <Button fx:id="backBtn" layoutX="289.0" layoutY="291.0" mnemonicParsing="false" onAction="#backButton" text="Back" />
    </children>
 </AnchorPane>
