--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/Order.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/Order.fxml
@@ -4,24 +4,25 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="Item" prefHeight="400" prefWidth="600" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.OrderBoundary">
+<AnchorPane fx:id="Item" prefHeight="400" prefWidth="600" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.OrderBoundary">
     <children>
-        <TextField fx:id="txt" layoutX="13.0" layoutY="57.0" promptText="card" />
-        <Label layoutX="12.0" layoutY="91.0" text="store pickup:" />
-        <ChoiceBox fx:id="str" layoutX="13.0" layoutY="118.0" prefWidth="150.0" />
-        <DatePicker fx:id="datepick" layoutX="14.0" layoutY="174.0" />
-        <Label layoutX="14.0" layoutY="144.0" text="pickup date:" />
-        <Label layoutX="6.0" layoutY="31.0" text="add card: (optional)" />
-        <Button layoutX="36.0" layoutY="287.0" mnemonicParsing="false" text="confirm order" />
-        <Label layoutX="35.0" layoutY="260.0" text="final price :" />
-        <Label fx:id="finalprice" layoutX="102.0" layoutY="260.0" />
-        <Label layoutX="14.0" layoutY="209.0" text="payment method:" />
-        <ChoiceBox fx:id="payment" layoutX="12.0" layoutY="227.0" prefWidth="150.0" />
+        <TextArea fx:id="txt" layoutX="413.0" layoutY="118.0" prefHeight="118.0" prefWidth="159.0" promptText="card" />
+        <Label layoutX="18.0" layoutY="109.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="store pickup:" />
+        <ChoiceBox fx:id="str" layoutX="19.0" layoutY="144.0" prefWidth="150.0" />
+        <DatePicker fx:id="datepick" layoutX="20.0" layoutY="217.0" />
+        <Label layoutX="20.0" layoutY="182.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="pickup date:" />
+        <Label layoutX="413.0" layoutY="82.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="add card: (optional)" />
+        <Button layoutX="19.0" layoutY="337.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 12px;" text="confirm order" />
+        <Label layoutX="19.0" layoutY="306.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-size: 12px; -fx-font-style: italic;" text="final price :" />
+        <Label fx:id="finalprice" layoutX="102.0" layoutY="306.0" />
+        <Label layoutX="19.0" layoutY="243.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="payment method:" />
+        <ChoiceBox fx:id="payment" layoutX="19.0" layoutY="273.0" prefWidth="150.0" />
         <Text layoutX="241.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 35px;" text="Order" />
-        <Button layoutX="542.0" layoutY="18.0" mnemonicParsing="false" text="login" />
+        <Button layoutX="511.0" layoutY="27.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 12px;" text="login" />
+      <Button id="returnbtn" fx:id="returnbtn" layoutX="22.0" layoutY="27.0" mnemonicParsing="false" onAction="#returnfunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 12px;" text="return" />
     </children>
 </AnchorPane>
