--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogboundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogboundary.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogBoundary">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogBoundary">
     <children>
         <ListView fx:id="myListView" layoutX="190.0" layoutY="100.0" prefHeight="285.0" prefWidth="213.0" style="-fx-background-radius: 20; -fx-border-radius: 30; -fx-background-color: transparent;" />
         <Text layoutX="227.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Catalog" textAlignment="CENTER">
@@ -35,8 +35,9 @@
                 <Slider fx:id="pricerange" prefHeight="12.0" prefWidth="110.0" />
             </children>
         </VBox>
-        <Button fx:id="searchbtn" layoutX="428.0" layoutY="367.0" mnemonicParsing="false" onAction="#updateFilter" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="search" />
+        <Button fx:id="searchbtn" layoutX="428.0" layoutY="367.0" mnemonicParsing="false" onAction="#updateFilter" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="update" />
         <Label fx:id="price" layoutX="20.0" layoutY="339.0" prefHeight="18.0" prefWidth="110.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="final price: 0 $" />
-        <CheckBox fx:id="all" layoutX="454.0" layoutY="215.0" mnemonicParsing="false" style="-fx-text-fill: black; -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="all" />
+        <CheckBox fx:id="all" layoutX="454.0" layoutY="215.0" mnemonicParsing="false" selected="true" style="-fx-text-fill: black; -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="all" />
+      <Button id="removebtn" fx:id="removebtn" layoutX="131.0" layoutY="367.0" mnemonicParsing="false" onAction="#removefunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 12px;" text="remove" />
     </children>
 </AnchorPane>
