--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogboundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogboundary.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogBoundary">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogBoundaryController">
     <children>
         <ListView fx:id="myListView" layoutX="190.0" layoutY="100.0" prefHeight="285.0" prefWidth="213.0" style="-fx-background-radius: 20; -fx-border-radius: 30; -fx-background-color: transparent;" />
         <Text layoutX="227.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Catalog" textAlignment="CENTER">
