--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/flowerboundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/flowerboundary.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="Item" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.FlowerBoundary">
+<AnchorPane fx:id="Item" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.FlowerBoundaryController">
     <children>
         <ImageView id="flowerImg" fx:id="flowerImg" fitHeight="120.0" fitWidth="120.0" layoutX="141.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
             <image>
