--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogemployee.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogemployee.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogBoundary">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogEmployee">
     <children>
         <ListView fx:id="myListView" layoutX="190.0" layoutY="100.0" prefHeight="285.0" prefWidth="213.0" style="-fx-background-radius: 20; -fx-border-radius: 30; -fx-background-color: transparent;" />
         <Text layoutX="227.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Catalog" textAlignment="CENTER">
@@ -25,10 +25,6 @@
         <Label layoutX="449.0" layoutY="190.0" prefHeight="27.0" prefWidth="69.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="color" />
         <Button fx:id="resetbtn" layoutX="505.0" layoutY="367.0" mnemonicParsing="false" onAction="#resetFilter" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="reset" />
         <Label layoutX="470.0" layoutY="84.0" prefHeight="27.0" prefWidth="69.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="filter" />
-        <ListView fx:id="mycart" layoutX="14.0" layoutY="145.0" prefHeight="189.0" prefWidth="169.0" style="-fx-background-radius: 20; -fx-border-radius: 30; -fx-background-color: transparent;" />
-        <Label layoutX="47.0" layoutY="84.0" prefHeight="27.0" prefWidth="56.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="cart" />
-        <Button fx:id="orderbtn" layoutX="14.0" layoutY="367.0" mnemonicParsing="false" onAction="#goToOrder" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="order" />
-        <Button fx:id="clearbtn" layoutX="77.0" layoutY="367.0" mnemonicParsing="false" onAction="#clear" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="clear" />
         <VBox fx:id="vb" layoutX="450.0" layoutY="120.0" prefHeight="65.0" prefWidth="110.0">
             <children>
                 <Label fx:id="pricetext" prefHeight="18.0" prefWidth="98.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="Price range" />
@@ -36,9 +32,10 @@
             </children>
         </VBox>
         <Button fx:id="searchbtn" layoutX="428.0" layoutY="367.0" mnemonicParsing="false" onAction="#updateFilter" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="update" />
-        <Label fx:id="price" layoutX="20.0" layoutY="339.0" prefHeight="18.0" prefWidth="110.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="final price: 0 $" />
         <CheckBox fx:id="all" layoutX="454.0" layoutY="215.0" mnemonicParsing="false" selected="true" style="-fx-text-fill: black; -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="all" />
-      <Button id="removebtn" fx:id="removebtn" layoutX="131.0" layoutY="367.0" mnemonicParsing="false" onAction="#removefunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 12px;" text="remove" />
-      <Button id="refreshbtn" fx:id="refreshbtn" layoutX="33.0" layoutY="27.0" mnemonicParsing="false" onAction="#refresh" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 12px;" text="refresh" />
+      <Button id="addbtn" fx:id="addbtn" layoutX="33.0" layoutY="128.0" mnemonicParsing="false" onAction="#addflower" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="add flower" />
+      <Button id="removebtn" fx:id="removebtn" layoutX="33.0" layoutY="178.0" mnemonicParsing="false" onAction="#removefunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 12px;" text="remove" />
+      <Button id="updatebtn" fx:id="updatebtn" layoutX="33.0" layoutY="220.0" mnemonicParsing="false" onAction="#updateflower" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 12px;" text="update" />
+      <Button onAction="#refresh" id="refreshbtn" fx:id="refreshbtn" layoutX="33.0" layoutY="263.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 12px;" text="refresh" />
     </children>
 </AnchorPane>
