--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogemployee.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/catalogemployee.fxml
@@ -1,41 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogEmployee">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CatalogEmployeeController">
     <children>
-        <ListView fx:id="myListView" layoutX="190.0" layoutY="100.0" prefHeight="285.0" prefWidth="213.0" style="-fx-background-radius: 20; -fx-border-radius: 30; -fx-background-color: transparent;" />
-        <Text layoutX="227.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Catalog" textAlignment="CENTER">
-            <font>
-                <Font name="Arial Bold" size="24.0" />
-            </font>
-        </Text>
-        <CheckBox fx:id="red" layoutX="454.0" layoutY="245.0" mnemonicParsing="false" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="red" />
-        <CheckBox fx:id="pink" layoutX="454.0" layoutY="275.0" mnemonicParsing="false" style="-fx-text-fill: pink; -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="pink" />
-        <CheckBox fx:id="blue" layoutX="454.0" layoutY="305.0" mnemonicParsing="false" style="-fx-text-fill: blue; -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="blue" />
-        <CheckBox fx:id="yellow" layoutX="454.0" layoutY="335.0" mnemonicParsing="false" style="-fx-text-fill: yellow; -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="yellow" />
-        <Label layoutX="449.0" layoutY="190.0" prefHeight="27.0" prefWidth="69.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="color" />
-        <Button fx:id="resetbtn" layoutX="505.0" layoutY="367.0" mnemonicParsing="false" onAction="#resetFilter" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="reset" />
-        <Label layoutX="470.0" layoutY="84.0" prefHeight="27.0" prefWidth="69.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="filter" />
-        <VBox fx:id="vb" layoutX="450.0" layoutY="120.0" prefHeight="65.0" prefWidth="110.0">
-            <children>
-                <Label fx:id="pricetext" prefHeight="18.0" prefWidth="98.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="Price range" />
-                <Slider fx:id="pricerange" prefHeight="12.0" prefWidth="110.0" />
-            </children>
-        </VBox>
-        <Button fx:id="searchbtn" layoutX="428.0" layoutY="367.0" mnemonicParsing="false" onAction="#updateFilter" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="update" />
-        <CheckBox fx:id="all" layoutX="454.0" layoutY="215.0" mnemonicParsing="false" selected="true" style="-fx-text-fill: black; -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 12px;" text="all" />
-      <Button id="addbtn" fx:id="addbtn" layoutX="33.0" layoutY="128.0" mnemonicParsing="false" onAction="#addflower" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold;" text="add flower" />
-      <Button id="removebtn" fx:id="removebtn" layoutX="33.0" layoutY="178.0" mnemonicParsing="false" onAction="#removefunc" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 12px;" text="remove" />
-      <Button id="updatebtn" fx:id="updatebtn" layoutX="33.0" layoutY="220.0" mnemonicParsing="false" onAction="#updateflower" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 12px;" text="update" />
-      <Button onAction="#refresh" id="refreshbtn" fx:id="refreshbtn" layoutX="33.0" layoutY="263.0" mnemonicParsing="false" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 12px;" text="refresh" />
+        <Text fx:id="employeesL" fill="#b91b1b" layoutX="194.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Employees" textAlignment="CENTER" />
+        <Button fx:id="userName" layoutX="10.0" layoutY="33.0" mnemonicParsing="false" onAction="#getDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" />
+        <Button fx:id="addBtn" layoutX="116.0" layoutY="79.0" mnemonicParsing="false" onAction="#addFlower" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="Add Flower" />
+        <Button fx:id="removeBtn" layoutX="102.0" layoutY="140.0" mnemonicParsing="false" onAction="#removeFlower" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="Remove Flower" />
+        <Button fx:id="updateBtn" layoutX="104.0" layoutY="205.0" mnemonicParsing="false" onAction="#updateFlower" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Update Flower" />
+        <Button fx:id="orderListBtn" layoutX="100.0" layoutY="270.0" mnemonicParsing="false" onAction="#orderList" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15px;" text="Store Order List" />
+        <Button fx:id="complaintListBtn" layoutX="105.0" layoutY="332.0" mnemonicParsing="false" onAction="#complaintList" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 15px;" text="Complaint List" />
+      <Label fx:id="catalogL" layoutX="399.0" layoutY="51.0" prefHeight="27.0" prefWidth="75.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 18px;" text="Catalog" />
+      <ListView fx:id="myListView" layoutX="330.0" layoutY="79.0" prefHeight="285.0" prefWidth="213.0" style="-fx-background-radius: 20; -fx-border-radius: 30; -fx-background-color: transparent;" />
     </children>
 </AnchorPane>
