--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/PersonalDetailsBoundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/PersonalDetailsBoundary.fxml
@@ -7,9 +7,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.RegistrationBoundaryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: cornsilk;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.PersonalDetailsBoundaryController">
     <children>
-        <Text fx:id="Registration" fill="#b91b1b" layoutX="193.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Registration" />
+        <Text fx:id="detailsL" fill="#b91b1b" layoutX="212.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: linear-gradient; -fx-font-weight: bold; -fx-font-style: oblique; -fx-font-size: 40px;" text="Details" />
+      <Button fx:id="userName" layoutX="10.0" layoutY="13.0" mnemonicParsing="false" onAction="#getDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" />
         <Label fx:id="LableName" layoutX="42.0" layoutY="65.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Name:" />
         <Label fx:id="labelID" layoutX="42.0" layoutY="102.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="ID:" />
         <Label fx:id="labelEmail" layoutX="42.0" layoutY="141.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Email:" />
@@ -23,16 +24,17 @@
         <TextField fx:id="textEmail" layoutX="193.0" layoutY="141.0" />
         <TextField fx:id="textPhone" layoutX="193.0" layoutY="180.0" />
         <TextField fx:id="textCredit" layoutX="193.0" layoutY="221.0" />
-      <ComboBox fx:id="chooseMonth" layoutX="193.0" layoutY="255.0" prefHeight="25.0" prefWidth="64.0" />
-      <Label fx:id="slash" alignment="CENTER" layoutX="263.0" layoutY="253.0" style="-fx-font-weight: bold; -fx-font-size: 20;" text="/" />
-      <ComboBox fx:id="chooseYear" layoutX="278.0" layoutY="255.0" prefHeight="25.0" prefWidth="64.0" />
+        <ComboBox fx:id="chooseMonth" layoutX="193.0" layoutY="255.0" prefHeight="25.0" prefWidth="64.0" />
+        <Label fx:id="slash" alignment="CENTER" layoutX="263.0" layoutY="253.0" style="-fx-font-weight: bold; -fx-font-size: 20;" text="/" />
+        <ComboBox fx:id="chooseYear" layoutX="278.0" layoutY="255.0" prefHeight="25.0" prefWidth="64.0" />
         <TextField fx:id="textCVV" layoutX="193.0" layoutY="289.0" />
         <TextField fx:id="textPassword" layoutX="193.0" layoutY="323.0" />
         <Button fx:id="backBtn" layoutX="193.0" layoutY="358.0" mnemonicParsing="false" onAction="#backButton" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="Back" />
-        <Button fx:id="signBtn" layoutX="270.0" layoutY="358.0" mnemonicParsing="false" onAction="#signButton" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="Sign Up" />
-      <Label fx:id="labelSubscription" layoutX="406.0" layoutY="69.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Choose Your Account:" />
+        <Button fx:id="updateBtn" layoutX="270.0" layoutY="358.0" mnemonicParsing="false" onAction="#addDetails" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" />
+      <Button fx:id="cancelBtn" layoutX="360.0" layoutY="358.0" mnemonicParsing="false" onAction="#cancelBtn" style="-fx-background-color: linear-gradient(#ff5400, #be1d00); -fx-background-insets: 0,1,2; -fx-background-radius: 3,2,1; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="Cancel" />
+        <Label fx:id="labelSubscription" layoutX="406.0" layoutY="69.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Choose Your Account:" />
         <ComboBox fx:id="chooseMembership" layoutX="406.0" layoutY="94.0" prefWidth="150.0" />
-      <Label fx:id="labelStore" layoutX="406.0" layoutY="130.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Choose Your Store:" />
+        <Label fx:id="labelStore" layoutX="406.0" layoutY="130.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Choose Your Store:" />
         <ComboBox fx:id="chooseStore" layoutX="406.0" layoutY="154.0" prefWidth="150.0" />
     </children>
 </AnchorPane>
