--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/PersonalDetailsBoundary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/PersonalDetailsBoundary.fxml
@@ -36,5 +36,7 @@
         <ComboBox fx:id="chooseMembership" layoutX="406.0" layoutY="94.0" prefWidth="150.0" />
         <Label fx:id="labelStore" layoutX="406.0" layoutY="130.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Choose Your Store:" />
         <ComboBox fx:id="chooseStore" layoutX="406.0" layoutY="154.0" prefWidth="150.0" />
+      <Label fx:id="refundLabel1" layoutX="406.0" layoutY="190.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" text="Refund:" />
+      <Label fx:id="refundLabel2" layoutX="406.0" layoutY="210.0" style="-fx-text-fill: linear-gradient(#ff5400, #be1d00); -fx-font-weight: bold; -fx-font-style: italic; -fx-font-size: 15px;" />
     </children>
 </AnchorPane>
